@@ -419,8 +419,10 @@ aws-sdk:
   # is no need to test *all* those releases. Instead we statically list every
   # N=5 releases to test.
   #
-  # Maintenance note: This should be updated periodically.
-  versions: '2.858.0 || 2.863.0 || 2.868.0 || 2.873.0 || 2.878.0 || 2.883.0 || 2.888.0 || 2.893.0 || 2.898.0 || 2.903.0 || 2.908.0 || 2.913.0 || 2.918.0 || >2.918 <3'
+  # Maintenance note: This should be updated periodically, keeping 2.858
+  # as the earliest version but updating the others.
+  versions: '2.858.0 || 2.881.0 || 2.886.0 || 2.891.0 || 2.896.0 || 2.901.0 || 2.906.0 || 2.911.0 || 2.916.0 || 2.921.0 || 2.926.0 || 2.931.0 || 2.936.0 || >2.936 <3'
   commands:
     - node test/instrumentation/modules/aws-sdk/s3.test.js
     - node test/instrumentation/modules/aws-sdk/sqs.js
+    - node test/instrumentation/modules/aws-sdk/dynamodb.js
