@@ -3,10 +3,12 @@ const semver = require('semver')
 const shimmer = require('../shimmer')
 const { instrumentationS3 } = require('./aws-sdk/s3')
 const { instrumentationSqs } = require('./aws-sdk/sqs')
+const { instrumentationDynamoDb } = require('./aws-sdk/dynamodb.js')
 
 const instrumentorFromSvcId = {
   s3: instrumentationS3,
-  sqs: instrumentationSqs
+  sqs: instrumentationSqs,
+  dynamodb: instrumentationDynamoDb
 }
 
 // Called in place of AWS.Request.send and AWS.Request.promise
