@@ -41,6 +41,9 @@ Notes:
 * Add <<disable-send, `disableSend`>> configuration option. This supports some
   use cases using the APM agent **without** an APM server. ({issues}2101[#2101])
 
+* Add instrumentation of all DynamoDB methods when using the
+  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`).
+
 [float]
 ===== Bug fixes
 
